<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/loginFragment">

    <!-- Login -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.aqua.aqualight.ui.auth.LoginFragment"
        android:label="@string/auth_login_title">

        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />

        <action
            android:id="@+id/action_loginFragment_to_signInFragment"
            app:destination="@id/signInFragment" />

    </fragment>

    <!-- Register -->
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.aqua.aqualight.ui.auth.RegisterFragment"
        android:label="@string/auth_register_title" />

    <!-- E-posta ile Giriş -->
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.aqua.aqualight.ui.auth.SignInFragment"
        android:label="@string/auth_signin_title">

        <action
            android:id="@+id/action_signInFragment_to_resetPasswordFragment"
            app:destination="@id/resetPasswordFragment" />

    </fragment>

    <!-- Şifre Sıfırla -->
    <fragment
        android:id="@+id/resetPasswordFragment"
        android:name="com.aqua.aqualight.ui.auth.ResetPasswordFragment"
        android:label="@string/auth_reset_password_title" />

</navigation>